/* --- ETagUtil.h --- */

/* ------------------------------------------
Author: undefined
Date: 8/10/2025
------------------------------------------ */

#ifndef ETAGUTIL_H
#define ETAGUTIL_H

class ETagUtil {
public:
    ETagUtil();
    ~ETagUtil();

private:

};

#endif // ETAGUTIL_H
