/* --- RateLimiter.h --- */

/* ------------------------------------------
Author: undefined
Date: 8/10/2025
------------------------------------------ */

#ifndef RATELIMITER_H
#define RATELIMITER_H

class RateLimiter {
public:
    RateLimiter();
    ~RateLimiter();

private:

};

#endif // RATELIMITER_H
