/* --- ServerPipeline.h --- */

/* ------------------------------------------
Author: undefined
Date: 8/10/2025
------------------------------------------ */

#ifndef SERVERPIPELINE_H
#define SERVERPIPELINE_H

class ServerPipeline {
public:
    ServerPipeline();
    ~ServerPipeline();

private:

};

#endif // SERVERPIPELINE_H
