/* --- SessionManager.h --- */

/* ------------------------------------------
Author: undefined
Date: 8/10/2025
------------------------------------------ */

#ifndef SESSIONMANAGER_H
#define SESSIONMANAGER_H

class SessionManager {
public:
    SessionManager();
    ~SessionManager();

private:

};

#endif // SESSIONMANAGER_H
