/* --- TimeUtil.h --- */

/* ------------------------------------------
Author: undefined
Date: 8/10/2025
------------------------------------------ */

#ifndef TIMEUTIL_H
#define TIMEUTIL_H

class TimeUtil {
public:
    TimeUtil();
    ~TimeUtil();

private:

};

#endif // TIMEUTIL_H
