@startuml
skinparam packageStyle rectangle
title Core Layer (Sessions, RateLimit, PUT/PATCH, Proxy, Logger)

' --- Logger (C++98-friendly) ---
class Logger {
  +enum Level { DEBUG, INFO, WARN, ERROR }
  +void set_level(int lvl)
  +void set_console_enabled(bool)
  +void add_file_sink(string path)
  +void debug(string msg)
  +void info(string msg)
  +void warn(string msg)
  +void error(string msg)
}

class Session { 
	+map<string,string> data 
	+long long expires_at_epoch 
}

class SessionManager {
  -map<string,Session> store_
  -string cookie_name_
  -int    max_age_
  +string ensure_session(HttpRequest& req, HttpResponse& res)
  +Session* get(string id)
  +void invalidate(string id)
  +void regenerate(HttpRequest&, HttpResponse&)
  +void touch(string id, long long now)
  +void gc(long long now_epoch)
}

class TokenBucket { 
	+double tokens 
	+double rate_per_sec 
	+double burst 
	+long long last_refill_epoch 
	+bool allow(int cost) 
}

class RateLimiter {
  -map<string, TokenBucket> bucketsByKey
  +RateLimiter(int rpm, int burst)
  +bool allow(const string& key, int cost)
  +void gc(long long now_epoch)
}

class PutPatchHandler {
  +int handle_put(const HttpRequest&, HttpResponse&)
  +int handle_patch(const HttpRequest&, HttpResponse&)
  -int write_file(const string& absPath, const vector<char>& body, string* newEtag)
  -bool within_quota(size_t bytes) const
  -int ensure_parent_dirs(const string& absPath)
}

class ReverseProxy {
  +int forward(const HttpRequest&, HttpResponse&, const Upstream&)
  +void add_forwarded_headers(const HttpRequest&, Headers&)
  +void filter_hop_by_hop(Headers&)
}

class Balancer { 
	+const Upstream* pick(UpstreamPool& pool) 
	+void on_success(Upstream&) 
	+void on_failure(Upstream&) 
}

class HealthChecker { 
	+void tick(UpstreamPool& pool, const string& path) 
}

class ServerPipeline {
  +void processRequest(const ServerConfig&, HttpRequest&, HttpResponse&)
  -SessionManager sessionMgr
  -RateLimiter    limiter
  -Balancer       balancer
  -Logger         log
}

' Util hooks
class TimeUtil
class PathUtil
class ETagUtil
class RandomUtil

ServerPipeline <-- SessionManager
SessionManager ..> RandomUtil
SessionManager ..> TimeUtil
RateLimiter ..> TimeUtil
PutPatchHandler ..> PathUtil
PutPatchHandler ..> ETagUtil
ReverseProxy ..> TimeUtil
ServerPipeline ..> Logger
@enduml
